fix jumping on tag click

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1608,7 +1608,9 @@ a.news-read-more:hover {
     height: auto; }
 
 .products-container {
-  margin-left: 270px; }
+  margin-left: 270px;
+  width: 100%;
+  max-width: 1076px; }
   @media (min-width: 1441px) {
     .products-container {
       margin-left: auto;
